# ExpressionDifferentiator

./: .gitignore  CMakeLists.txt  README.md  expression_differentiator.hpp  tests.cpp
.github/workflows/: benchmark-manual.yml  cmake-multi-platform.yml
benchmarks/: BENCHMARKS.md  benchmark.cpp  benchmark_compare.cpp
include/: dual.hpp  equation.hpp  expressions.hpp  forward_driver.hpp  gradient.hpp  mpl.hpp  operations.hpp  seeded_energy.hpp  taylor_dual.hpp  traits.hpp  unary_math.hpp  values.hpp  vector_dual.hpp  version.hpp  vforward_driver.hpp
scripts/: summarize_traces.py
src/: main.cpp
